# CSE_TUWIEN

./: .gitignore  ex1.py  ex2.py  ex3.py  ex4.py
AMF/: .AMFoundations.autosave.xopp  AMFoundations.xopp
AMF/e2/: amf ue2.py
AMF/e6/: .e6.autosave.xopp  e6.xopp
AMF/e7/: .e7.autosave.xopp  e7.xopp
AMF/e9/: .e9.autosave.xopp  e9.xopp
NC/: .Lecture Notes - Melenk 2021.autosave.xopp  2022-12-01-Note-19-44.xopp  2022-12-06-Note-11-58.xopp  2023-01-25-Note-14-06.xopp  2023-01-26-Note-14-40.xopp  Lecture Notes - Melenk 2021.xopp
NC/e1/: 1.1.py  1.5.py  Lecture Notes - Melenk 2021.xopp
NC/e10/: exercise 10.5.py
NC/e2/: #2.2.py#  #2.3.py#  2.3.py  2.4.py
NC/e3/: 3.2.py  plotex.py
NC/e4/: 4.2.py  4.4.py  4.5.py
NC/e5/: 5_1.py  5_2.py
NC/e6/: 6_1.py  6_3.py
NC/e7/: 7_2.py  7_3.py  e7.xopp
NC/e8/: .e8.autosave.xopp  8_2.py  8_3.py  8_3v2.py  e8.xopp
NC/e9/: exercise 9.1.py  exercise 9.5.py
NSSC1/: .2022_NSSC_I_Lecture_6.autosave.xopp  .nssc lecture7 qa.autosave.xopp  2022-12-01-Note-14-13.xopp  2022_NSSC_I_Lecture_6.xopp  2022_NSSC_I_Lecture_7.xopp  2023-01-29-Note-14-50.xopp
NSSC1/e3/: 2022-12-19-Note-13-43.xopp
NSSC1/ex2/t2/: Makefile  benchmark_MMM.cpp
SS2023/Iterative Methods/: iter.xopp
SS2023/Large Systems/: project1.xopp
SS2023/NSSC2/slides/: 2023_NSSC_II_Lecture_2.xopp
SS2023/NumPDEs/: .2023-04-14-Note-19-29.autosave.xopp  4405.old.autosave.xopp  ExerciseSheets_NumPDE-1-2.xopp  NumPDE.xopp  NumPDE_Lecture_Video_Links_Faustmann_2022.docx
SS2023/NumPDEs/e1/: #1.py#  .#1.py  1.py  1_hand.py  Flos 1_1.py  e1.xopp  test.py
SS2023/NumPDEs/e2/: .e2.autosave.xopp  2023-03-17-Note-12-27.xopp  2_1.py  e2.xopp
SS2023/NumPDEs/e3/: .4492.old.autosave.autosave.xopp  .e3.autosave.xopp  4492.old.autosave.xopp  6.py  e3.xopp
SS2023/NumPDEs/e4/: .e4.autosave.xopp
SS2023/NumPDEs/e5/: .e5.autosave.xopp  2023-04-25-Note-22-37.xopp
SS2023/NumPDEs/e6/: .e6.autosave.xopp  e6.xopp  ex6_5.py
SS2023/NumPDEs/e7/: .e7.autosave.xopp  7_1.py  7_1bak.py  e7.xopp
SS2023/NumPDEs/e8/: .e8.autosave.xopp  7_5erwin.py  8_1.py  8_1beta.py  8_5.py  e8.xopp
SS2023/NumPDEs/e9/: .e9.autosave.xopp  9_4.py  9_5.py  e9.xopp
WS2022/AMF/: 2023-01-31-Note-00-06.xopp
WS2022/AMF/e4/: plot2.py
WS2022/AMF/e6/: e6.xopp
WS2022/AMF/e8/: e8.xopp
WS2022/AMF/e9/: e9.xopp
WS2022/NC/: 2023-01-28-Note-16-01.xopp  Lecture Notes - Melenk 2021.xopp  functions.py
WS2022/NC/e1/: 1.2.py  1.4.py  1.5.py
WS2022/NC/e10/: exercise 10.1.py  exercise 10.2.py
WS2022/NC/e2/: 2.1.py  2.2.py  2.5.py
WS2022/NC/e3/: 3.4.py  t1_plot.py
WS2022/NC/e5/: 5_4.py
WS2022/NC/e6/: 6_3.py
WS2022/NC/e8/: e8.xopp
WS2022/NC/e9/: exercise 9.2.py  exercise 9.3.py
WS2022/NSSC1/: ..5087.autosave.autosave.autosave.xopp  .5087.autosave.autosave.xopp  2022-11-22-Note-12-32.xopp  2022_NSSC_I_Lecture_8.xopp  assoc.cpp  nssc lecture7 qa.xopp
WS2022/many-cores/e2/: 1a1corr.cu  1b2corr.cu  2acorrfull.cu  2bfast.cu
WS2022/many-cores/e3/: 1a.txt  1b.txt  plot.py
WS2023/Advanced Programming in C++/: .note.md.~undo-tree~
WS2023/Advanced Programming in C++/ex0/: .expected-files  .tests  CMakeLists.txt  README.md  flake.nix
WS2023/Advanced Programming in C++/ex0/ex0/: CMakeLists.txt  helpers.cpp  helpers.hpp  helpers.testA.cpp  helpers.testB.cpp  helpers.testC.cpp  helpers.testD.cpp  helpers.testE.cpp  helpers.testF.cpp  helpers.testG.cpp
WS2023/Advanced Programming in C++/ex11/: .expected-files  CMakeLists.txt  README.md
WS2023/Advanced Programming in C++/ex11/.cache/clangd/index/: Widget.cpp.81E8280F0E5CF175.idx  Widget.hpp.3BAC0DDBCF6C5CCD.idx  Widget.testA.cpp.A1CBB741F14FF982.idx  Widget.testB.cpp.87659BA12B3D833D.idx  Widget.testC.cpp.9F88533210F1933C.idx  main.cpp.14C8BC885D4062F1.idx
WS2023/Advanced Programming in C++/ex11/benchmark/: CMakeLists.txt  main.cpp
WS2023/Advanced Programming in C++/ex11/doxygen/: CMakeLists.txt
WS2023/Advanced Programming in C++/ex11/ex11/: CMakeLists.txt  Widget.cpp  Widget.hpp  Widget.testA.cpp  Widget.testB.cpp  Widget.testC.cpp
WS2023/Advanced Programming in C++/ex12/: .clang-format  .expected-files  .gitignore  CMakeLists.txt  R2.md  README.md  flake.nix
WS2023/Advanced Programming in C++/ex12/ex12/: CMakeLists.txt  Vector.cpp  Vector.hpp  Vector.testA.cpp  Vector.testB.cpp  Vector.testC.cpp
WS2023/Advanced Programming in C++/ex13/: .expected-files  CMakeLists.txt  (+2 more)
WS2023/Advanced Programming in C++/ex13/ex13/: CMakeLists.txt  List.cpp  List.hpp  List.testA.cpp  List.testB.cpp  List.testC.cpp  List.testD.cpp
WS2023/Advanced Programming in C++/ex21/ex21/: CMakeLists.txt  Wrappers.hpp  Wrappers.testA.cpp  Wrappers.testB.cpp  Wrappers.testC.cpp
WS2023/Advanced Programming in C++/ex22/: .expected-files  .tests  CMakeLists.txt  README.md
WS2023/Advanced Programming in C++/ex22/ex22/: CMakeLists.txt  Distribution.hpp  Distribution.testA.cpp  Distribution.testB.cpp  Distribution.testC.cpp  Distribution.testD.cpp  Distribution.testE.cpp  VecN.hpp
WS2023/Advanced Programming in C++/ex23/ex23/: Algorithms.hpp  Algorithms.testA.cpp  Algorithms.testB.cpp  Algorithms.testC.cpp  Algorithms.testD.cpp  Algorithms.testE.cpp  Algorithms.testF.cpp  Algorithms.testG.cpp  Algorithms.testH.cpp  Algorithms.testI.cpp  CMakeLists.txt  Reference.hpp
WS2023/Advanced Programming in C++/ex31/ex31/: CMakeLists.txt  List.hpp  List.testA.cpp  List.testB.cpp  List.testC.cpp  List.testD.cpp  List.testE.cpp  List.testF.cpp  List.testG.cpp  List.testH.cpp
WS2023/Advanced Programming in C++/ex32/ex32/: CMakeLists.txt  unique_ptr.hpp  unique_ptr.testA.cpp  unique_ptr.testB.cpp  unique_ptr.testC.cpp  unique_ptr.testD.cpp
WS2023/Efficient Programs/: Skriptum.html  exercise_program.html  videos.html
WS2023/High Performance Computing/: .note.md.~undo-tree~  mpicode.tgz
WS2023/Many-Core Architectures/: .note.md.~undo-tree~
many-cores/: 1a2corr.txt  1b1corr.txt  1b1corrcorr.txt  1cdcorr.txt  1cdnewest.txt  1d.txt  1dcheck.txt  1e old.txt  2a.txt  2acorr.txt  2b  code it.cu  plot.py
many-cores/e2/: 1ecorrcorrcorr.cu
many-cores/e3/: skipvals.txt  stridevals.txt
(+218 files in other folders)
