cmake_minimum_required(VERSION 3.12)

find_package(Doxygen REQUIRED) 

set(DOXYGEN_QUIET NO)

set(DOXYGEN_VERBATIM_HEADERS YES)
set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_EXTRACT_PRIVATE YES)
set(DOXYGEN_ALLEXTERNALS YES)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ./README.md)
set(DOXYGEN_USE_MATHJAX YES)

set(DOXYGEN_ALWAYS_DETAILED_SEC YES)
set(DOXYGEN_HIDE_UNDOC_RELATIONS NO)
set(DOXYGEN_UML_LOOK YES)
set(DOXYGEN_TEMPLATE_RELATIONS YES)

set(DOXYGEN_INLINE_SOURCES NO)
set(DOXYGEN_SOURCE_BROWSER YES)
set(DOXYGEN_SHOW_FILES YES)
set(DOXYGEN_FULL_PATH_NAMES YES)
set(DOXYGEN_EXTERNAL_PAGES NO)
set(DOXYGEN_EXTERNAL_GROUPS NO)
set(DOXYGEN_SHOW_NAMESPACES NO)
set(DOXYGEN_GENERATE_TODOLIST YES)

set(DOXYGEN_WARN_AS_ERROR YES)
set(DOXYGEN_GENERATE_TESTLIST NO)
set(DOXYGEN_HTML_EXTRA_STYLESHEET ${CMAKE_CURRENT_SOURCE_DIR}/doxygen-awesome.css)

set(DOXYGEN_HTML_OUTPUT ${PROJECT_SOURCE_DIR}/doc)

doxygen_add_docs(doxygen 
                ${PROJECT_SOURCE_DIR}
                ALL
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                COMMENT "generating doxygen output" )

